Add personal information

--- a/index.html
+++ b/index.html
@@ -91,18 +91,18 @@ Author: Carlos Alfredo Cervantes Bedoy
 				<div class="top-service-grids" id="services">
 					<div class="top-service-grid">
 						<a href="#"><img src="images/top-grid-pic1.png" alt="" /></a>
-						<a href="#"><span>Flat Design</span></a>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod temporUt enim ad minim veniam</p>
+						<a href="#"><span>Mobile developer</span></a>
+						<p>I'm a mobile developer for iOS and Android</p>
 					</div>
 					<div class="top-service-grid">
 						<a href="#"><img src="images/top-grid-pic2.png" alt="" /></a>
 						<a href="#"><span>Great Ideas</span></a>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod temporUt enim ad minim veniam</p>
+						<p>I love code, so all the time I'm writing code</p>
 					</div>
 					<div class="top-service-grid">
 						<a href="#"><img src="images/top-grid-pic4.png" alt="" /></a>
-						<a href="#"><span>Browser Compatibility</span></a>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod temporUt enim ad minim veniam</p>
+						<a href="#"><span>Degree in TI</span></a>
+						<p>I'm a TI manager, but I like as Developer :D</p>
 					</div>
 					<div class="clear"> </div>
 				</div>
