Some changes necesaries

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ Author: Carlos Alfredo Cervantes Bedoy
 				<div class="wrap">
 				<div class="recent-works-head">
 					<h3>Recent works</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod temporUt enim ad minim veniam</p>
+					<p>There are some applications I've done</p>
 				</div>
 				<!---start-mfp ---->	
 			<div id="small-dialog1" class="mfp-hide">
@@ -301,8 +301,8 @@ Author: Carlos Alfredo Cervantes Bedoy
 								<span> </span>
 							</div>
 							<div class="blog-grid-right">
-								<h3><a href="#">Layered Neatly Photoshop Template</a></h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et quam est. Mauris faucibus tellus ac auctor posuere. Integer lobortis purus a felis adipiscing, eget ornare justo semper. Etiam commodo tincidunt ante.</p>
+								<h3><a href="#">Oh my list </a></h3>
+								<p>Android mobile application focused for teachers to admistration for tasks</p>
 								<a class="blogbtng popup-with-zoom-anim" href="#small-dialog1">Show More</a>
 							</div>
 							<div class="clear"> </div>
