--- a/index.html
+++ b/index.html
@@ -1,1 +1,79 @@
-hello word
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="shortcut icon" href="assets/ico/favicon.png">
+
+    <title>Carlos Bedoy</title>
+
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="assets/css/main.css" rel="stylesheet">
+    <link href="assets/css/font-awesome.min.css" rel="stylesheet">
+
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <![endif]-->
+  </head>
+
+  <body>
+
+
+	<div class="nav">
+		<a href="index.html#hero" class="scroll">section one</a>
+		<a href="index.html#work" class="scroll">section two</a>
+		<a href="index.html#networks" class="scroll">section three</a>
+	</div>
+	<section id="hero">
+			<div class="hero-block">
+				<img class="img-circle" src="assets/img/logo.png" width="200" height="200" class="mb-7 hero-image">
+				<p>Hello, I'm Carlos, and I'm a Mobile & Web Developer<br/>
+				I develop for iOS, Android and Django.<br/>
+				Also I'm musican and I love my life :D</p>
+			</div>
+		<a href="index.html#work" class="scroll"><span class="down-arrow"></span></a>
+	</section>
+	
+	
+	<section id="work">
+		<div class="showcase">
+			<div class="showcase-tiles">
+				<ul class="slides">
+					<!--Dribbble feed-->	
+				</ul>
+			</div>
+			<div class="showcase-info">
+				<a href="https://github.com/CBedoy"><h2 class="mb-7">Fork me in Github >></h2></a>
+			</div>
+		</div>
+	</section>
+	
+	
+	<section id="networks">
+		<div class="container">
+			<p>
+				<a href="https://github.com/CBedoy"><i class="github fa fa-github"></i></a>
+				<a href="https://www.facebook.com/carlos.bedoy"><i class="facebook fa fa-facebook"></i></a>
+				<a href="https://bitbucket.org/bedoy"><i class="bitbucket fa fa-bitbucket"></i></a>
+				<a href="https://soundcloud.com/bedoyproject/"><i class="music fa fa-music"></i></a>
+			</p>
+
+		</div>
+	
+	</section>
+
+
+    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/jribbble.js"></script>
+    <script src="assets/js/site-ck.js"></script>
+
+  </body>
+</html>
