--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>tuktuk - Landing Example</title>
     <!-- Mobile Specific Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <link rel="stylesheet" href="../package/tuktuk.css">
-    <link rel="stylesheet" href="../package/tuktuk.theme.css">
+    <link rel="stylesheet" href="stylesheets/tuktuk.css">
+    <link rel="stylesheet" href="stylesheets/tuktuk.theme.css">
     <!-- TUKTUK.WIDGETS -->
-    <link rel="stylesheet" href="../package/tuktuk.icons.css">
+    <link rel="stylesheet" href="stylesheets/tuktuk.icons.css">
     <style>
         body > header .logo {
             margin-top: 8px;
@@ -37,11 +37,12 @@
         <div class="row">
             <div class="column_6">
                 <img src="../images/logo-color.png" class="logo on-left"/>
-                <h2 class="text italic thin">Landing Template</h2>
+                <h2 class="text italic thin">Code && Music</h2>
             </div>
             <nav class="column_6 text right">
-                <a href="#" class="button secondary"><span class="icon user"></span>Login</a>
-                <a href="#" class="button"><span class="icon pencil"></span>Signup</a>
+                <a href="#" class="button"><span class="icon music"></span>Soundcloud</a>
+                <a href="#" class="button"><span class="icon facebook"></span>Facebook</a>
+                <a href="#" class="button"><span class="icon github"></span>Fork me</a>
             </nav>
         </div>
     </header>
@@ -49,8 +50,8 @@
     <section class="bck darkest landing text center color white">
         <div class="row">
             <div class="column_10 offset_1">
-                <h1><strong>tuk</strong>tuk</h1>
-                <h2 class="margin-bottom">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
+                <h1><strong>Carlos</strong> Bedoy</h1>
+                <h2 class="margin-bottom">Be happy while write code maybe tommorrow you can't do it. <3</h2>
             </div>
         </div>
         <div class="row">
@@ -59,7 +60,7 @@
                 <button class="button large icon envelope"></button>
             </div>
         </div>
-        <h5 class="text book">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h5>
+        <h5 class="text book">If you have any question send me that.</h5>
     </section>
 
     <section class="bck theme padding text center ">
@@ -110,9 +111,9 @@
     <section class="bck lightest landing">
         <div class="row text center">
             <div class="column_10 offset_1">
-                <h2 class="text bold color theme">Lorem ipsum dolor sit amet</h2>
-                <h4 class="text book italic">Quam sunt quos minima consequatur</h4>
-                <a href="#" class="button large margin-top">Yes, please!</a>
+                <h2 class="text bold color theme">Do you know Pademobile</h2>
+                <h4 class="text book italic">Click the next button for know it.</h4>
+                <a href="#" class="button large margin-top">Check it!</a>
             </div>
         </div>
     </section>
@@ -120,32 +121,23 @@
     <section class="padding bck color">
         <div class="row margin-bottom">
             <div class="column_10 offset_1 text center">
-                <h1 class="color book theme">Author</h1>
-                <h3 class="text thin">Javi Jimenez is the CTO and co-founder of <a href="http://tapquo.com" class="text normal">tapquo</a>. A restless mind that always strives for continuous improvement, able to create frameworks like <a href="http://lungo.tapquo.com" class="text normal">Lungo</a>, <a href="http://quojs.tapquo.com" class="text normal">QuoJS</a>, <a href="http://monocle.tapquo.com" class="text normal">Monocle</a> used by thousands of developers around the world.</h3>
+                <h1 class="color book theme">Who?</h1>
+                <h3 class="text thin">Carlos Bedoy is a mobile developer of  <a href="http://pademobile.com" class="text normal">Pademobile</a>. I've developed some applications for iOS and android or Django, at pademobile. Also I've developed mobile applications for my personal catalog.</h3>
              </div>
          </div>
 
         <div class="row ">
             <div class="column_4 offset_4 text center">
-                <img src="http://cdn.tapquo.com/photos/soyjavi.jpg" class="responsive rounded margin-bottom"/>
-                <a href="https://twitter.com/soyjavi" class="twitter-follow-button " data-show-count="true" data-dnt="true">Follow @soyjavi</a>
-                <script>
-                    !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="http://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
-                </script>
+                <img src="https://avatars2.githubusercontent.com/u/5570799?s=460" class="responsive rounded margin-bottom"/>
+                <a href="https://github.com/cbedoy/" class="twitter-follow-button " data-show-count="true" data-dnt="true">Fork me in github</a>
+                
             </div>
         </div>
     </section>
 
     <footer class="bck dark padding">
         <div class="row margin-top margin-bottom">
-            <div class="column_5">
-                <p class="text bold big">Handcrafted by <a href="http://tapquo.com" class="display inline"><img src="http://cdn.tapquo.com/images/logo_footer.png"/></a></p>
-                We're a  user experiences company located in <span class="text normal">Bilbao</span>, ES.
-            </div>
-            <div class="column_4">
-                <p class="text bold big">Join the team!</p>
-                Let us know how you're! <a href="mailto:hello@tapquo.com?subject=job" class="text underline color theme">Get in touch</a>
-            </div>
+
             <div class="column_3">
                 <p class="text bold big">Need some help?</p>
                 For quick answers or help <a href="https://twitter.com/tapquo" target="_blank" class="text underline color theme">follow us</a>
@@ -154,6 +146,6 @@
     </footer>
 
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-    <script src="../package/tuktuk.js"></script>
+    <script src="javascripts/tuktuk.js"></script>
 </body>
 </html>
