New changes of release

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                 <h2 class="text italic thin">Code && Music</h2>
             </div>
             <nav class="column_6 text right">
-                <a href="#" class="button"><span class="icon music"></span>Soundcloud</a>
-                <a href="#" class="button"><span class="icon facebook"></span>Facebook</a>
-                <a href="#" class="button"><span class="icon github"></span>Fork me</a>
+                <a href="https://soundcloud.com/bedoyproject" class="button"><span class="icon music"></span>Soundcloud</a>
+                <a href="https://www.facebook.com/carlos.bedoy" class="button"><span class="icon facebook"></span>Facebook</a>
+                <a href="https://github.com/cbedoy" class="button"><span class="icon github"></span>Fork me</a>
             </nav>
         </div>
     </header>
@@ -66,48 +66,36 @@
     <section class="bck theme padding text center ">
         <div class="row padding-bottom">
             <div class="column_10 offset_1">
-                <h1 class="text book color default">Lorem ipsum dolor sit amet</h1>
+                <h1 class="text book color default">Code is my life</h1>
                 <h4>
-                    Quam sunt quos minima consequatur dolore quaerat vel recusandae numquam ab qui dignissimos doloribus molestiae pariatur magnam libero nam consectetur asperiores maiores.
+                    I have 23 years olds, and I specialized in mobile development, also I like write code everytime, and learn new things of the programming, I'm specialized on the frontend but also have good skills on the backend, my favorites lenguages are Objective C, Python and Java, but rencently I like javascript.
                 </h4>
             </div>
         </div>
 
         <div class="row padding-top">
             <div class="column_3">
-                <h2 class="icon user"></h2>
-                <h5 class="text normal">Lorem ipsum dolor sit</h5>
-                <small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates, ipsam, explicabo, fugit in magni delectus aliquid.</small>
+                <h2 class="icon tablet"></h2>
+                <h5 class="text normal">Mobile development</h5>
+                <small>iOS and Android development applications.</small>
             </div>
             <div class="column_3">
-                <h2 class="icon group"></h2>
-                <h5 class="text normal">Lorem ipsum dolor sit</h5>
-                <small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates, ipsam, explicabo, fugit in magni delectus aliquid.</small>
+                <h2 class="icon desktop"></h2>
+                <h5 class="text normal">Desktop development</h5>
+                <small>Java and .NET development.</small>
             </div>
             <div class="column_3">
-                <h2 class="icon cog"></h2>
-                <h5 class="text normal">Lorem ipsum dolor sit</h5>
-                <small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates, ipsam, explicabo, fugit in magni delectus aliquid.</small>
+                <h2 class="icon laptop"></h2>
+                <h5 class="text normal">Web Development</h5>
+                <small>Django and Javascript development.</small>
             </div>
             <div class="column_3">
-                <h2 class="icon twitter"></h2>
-                <h5 class="text normal">Lorem ipsum dolor sit</h5>
-                <small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates, ipsam, explicabo, fugit in magni delectus aliquid.</small>
+                <h2 class="icon github"></h2>
+                <h5 class="text normal">All projects on github</h5>
+                <small>Some projects contributtions adn code of projects.</small>
             </div>
         </div>
     </section>
-
-    <section class="bck light padding">
-        <div class="row text thin center">
-            <div class="column_10 offset_1">
-                <h1 class="text book color theme">Lorem ipsum dolor sit amet</h1>
-                <h4>
-                    Quam sunt quos minima consequatur dolore quaerat vel recusandae numquam ab qui dignissimos doloribus molestiae pariatur magnam libero nam consectetur asperiores maiores.
-                </h4>
-            </div>
-        </div>
-    </section>
-
     <section class="bck lightest landing">
         <div class="row text center">
             <div class="column_10 offset_1">
@@ -122,7 +110,7 @@
         <div class="row margin-bottom">
             <div class="column_10 offset_1 text center">
                 <h1 class="color book theme">Who?</h1>
-                <h3 class="text thin">Carlos Bedoy is a mobile developer of  <a href="http://pademobile.com" class="text normal">Pademobile</a>. I've developed some applications for iOS and android or Django, at pademobile. Also I've developed mobile applications for my personal catalog.</h3>
+                <h3 class="text thin">Carlos Bedoy is a mobile developer of  <a href="http://pademobile.com" class="text normal">Pademobile</a>. I've developed some applications for iOS and android or Django, at pademobile. Also I've developed mobile applications for my personal portfolio.</h3>
              </div>
          </div>
 
