--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="row">
             <div class="column_10 offset_1">
                 <h1><strong>Carlos</strong> Bedoy</h1>
-                <h2 class="margin-bottom">Be happy while write code maybe tommorrow you can't do it. <3</h2>
+                <h2 class="margin-bottom">Be happy while writing code 'cause maybe tommorrow you can't do it. <3</h2>
             </div>
         </div>
         <div class="row">
@@ -68,7 +68,7 @@
             <div class="column_10 offset_1">
                 <h1 class="text book color default">Code is my life</h1>
                 <h4>
-                    I have 23 years olds, and I specialized in mobile development, also I like write code everytime, and learn new things of the programming, I'm specialized on the frontend but also have good skills on the backend, my favorites lenguages are Objective C, Python and Java, but rencently I like javascript.
+                    I have 23 years olds, and I specialized in mobile development, also I like write code everytime, and learn new things of the programming, I'm specialized on the frontend but also have good skills on the backend, my favorites lenguages are Objective C, Python and Java, but recently I like javascript, also I'm musician and free time I usually compose music with my guitar, my Mac and my dreams...
                 </h4>
             </div>
         </div>
