--- a/index.html
+++ b/index.html
@@ -1,139 +1,248 @@
-
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8" />
-    <title>Carlos Bedoy - Github</title>
-    <!-- Mobile Specific Metas -->
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <link rel="stylesheet" href="stylesheets/tuktuk.css">
-    <link rel="stylesheet" href="stylesheets/tuktuk.theme.css">
-    <!-- TUKTUK.WIDGETS -->
-    <link rel="stylesheet" href="stylesheets/tuktuk.icons.css">
-    <style>
-        body > header .logo {
-            margin-top: 8px;
-            margin-right: 8px;
-            max-height: 30px; }
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-        body > footer img {
-            height: 18px;
-            position: relative;
-            top: 5px;
-            left: 2px; }
+    <title>Carlos Bedoy</title>
 
-        section.landing input {
-            border-radius: 5px 0px 0px 5px !important;
+    <!-- Bootstrap core CSS -->
+    <link href="assets/css/bootstrap.css" rel="stylesheet">
 
-        }
+    <!-- Custom styles for this template -->
+    <link href="assets/css/main.css" rel="stylesheet">
+    <link href="assets/css/font-awesome.min.css" rel="stylesheet">
 
-        section.landing button {
-            border-radius: 0px 5px 5px 0px !important;}
-    </style>
-</head>
-<body class="text thin">
-    <!-- ========================== HEADER ========================== -->
-    <header class="bck margin-top margin-bottom">
-        <div class="row">
-            <div class="column_6">
-                <img src="../images/logo-color.png" class="logo on-left"/>
-                <h2 class="text italic thin">Code && Music</h2>
-            </div>
-            <nav class="column_6 text right">
-                <a href="https://soundcloud.com/bedoyproject" class="button"><span class="icon music"></span>Soundcloud</a>
-                <a href="https://www.facebook.com/carlos.bedoy" class="button"><span class="icon facebook"></span>Facebook</a>
-                <a href="https://github.com/cbedoy" class="button"><span class="icon github"></span>Fork me</a>
-            </nav>
+    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="assets/js/chart.js"></script>
+
+
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <![endif]-->
+  </head>
+
+  <body>
+
+    <!-- Fixed navbar -->
+    <div class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="https://soundcloud.com/bedoyproject"><i class="fa fa-music"></i></a>
         </div>
-    </header>
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li class="active"><a href="#contact">Contact</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </div>
 
-    <section class="bck darkest landing text center color white">
-        <div class="row">
-            <div class="column_10 offset_1">
-                <h1><strong>Carlos</strong> Bedoy</h1>
-                <h2 class="margin-bottom">Be happy while writing code 'cause maybe tommorrow you can't do it. <3</h2>
-            </div>
-        </div>
-        <div class="row">
-            <div class="column_6 offset_3 form subscribe">
-                <input type="email" id="mail" class="large" placeholder="Your email address">
-                <button class="button large icon envelope"></button>
-            </div>
-        </div>
-        <h5 class="text book">If you have any question send me that.</h5>
-    </section>
 
-    <section class="bck theme padding text center ">
-        <div class="row padding-bottom">
-            <div class="column_10 offset_1">
-                <h1 class="text book color default">Code is my life</h1>
-                <h4>
-                    I have 23 years olds, and I specialized in mobile development, also I like write code everytime, and learn new things of the programming, I'm specialized on the frontend but also have good skills on the backend, my favorites lenguages are Objective C, Python and Java, but recently I like javascript, also I'm musician and free time I usually compose music with my guitar, my Mac and my dreams...
-                </h4>
-            </div>
-        </div>
+	<div id="hello">
+	    <div class="container">
+	    	<div class="row">
+	    		<div class="col-lg-8 col-lg-offset-2 centered">
+	    			<h1>Carlos Bedoy</h1>
+	    			<h2>Mobile = (&App) -> D3veloper(self);<br><br>Code && Music</h2>
+	    		</div><!-- /col-lg-8 -->
+	    	</div><!-- /row -->
+	    </div> <!-- /container -->
+	</div><!-- /hello -->
+	
+	<div id="green">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-5 centered">
+					<img src="assets/img/iphone.png" alt="">
+				</div>
+				
+				<div class="col-lg-7 centered">
+					<h3>Code is my life</h3>
+					<p>I have 23 years olds, and I specialized in mobile development, also I like write code everytime, and learn new things of the programming, I'm specialized on the frontend but also have good skills on the backend, my favorites lenguages are Objective C, Python and Java, but recently I like javascript, also I'm musician and free time I usually compose music with my guitar, my Mac and my dreams....</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	
+	<div class="container">
+		<div class="row centered mt grid">
+			<h3>Apps developed and others things...</h3>
+			<div class="mt"></div>
+			<div class="col-lg-4">
+				<a href="#"><img src="assets/img/01.jpg" alt=""></a>
+			</div>
+			<div class="col-lg-4">
+				<a href="#"><img src="assets/img/02.jpg" alt=""></a>
+			</div>
+			<div class="col-lg-4">
+				<a href="#"><img src="assets/img/03.jpg" alt=""></a>
+			</div>
+		</div>
+		
+		<div class="row centered mt grid">
+			<div class="mt"></div>		
+			<div class="col-lg-4">
+				<a href="#"><img src="assets/img/04.jpg" alt=""></a>
+			</div>
+			<div class="col-lg-4">
+				<a href="#"><img src="assets/img/05.jpg" alt=""></a>
+			</div>
+			<div class="col-lg-4">
+				<a href="#"><img src="assets/img/06.jpg" alt=""></a>
+			</div>
+		</div>
+		
+		<div class="row mt centered">
+			<div class="col-lg-7 col-lg-offset-1 mt">
+					<p class="lead">Currently I work on Pademobile, but I love make some code for others Developers witch as Android Libraries, Java libraries etc. You can see my code on Github <3</p>
+			</div>
+			
+			<div class="col-lg-3 mt">
+				<form action="https://github.com/cbedoy">
+				 	<p><button type="button" class="btn btn-theme btn-lg">Fork ME!</button></p>
+				</form>
+			</div>
+		</div>
+	</div>
 
-        <div class="row padding-top">
-            <div class="column_3">
-                <h2 class="icon tablet"></h2>
-                <h5 class="text normal">Mobile development</h5>
-                <small>iOS and Android development applications.</small>
-            </div>
-            <div class="column_3">
-                <h2 class="icon desktop"></h2>
-                <h5 class="text normal">Desktop development</h5>
-                <small>Java and .NET development.</small>
-            </div>
-            <div class="column_3">
-                <h2 class="icon laptop"></h2>
-                <h5 class="text normal">Web Development</h5>
-                <small>Django and Javascript development.</small>
-            </div>
-            <div class="column_3">
-                <h2 class="icon github"></h2>
-                <h5 class="text normal">All projects on github</h5>
-                <small>Some projects contributtions adn code of projects.</small>
-            </div>
-        </div>
-    </section>
-    <section class="bck lightest landing">
-        <div class="row text center">
-            <div class="column_10 offset_1">
-                <h2 class="text bold color theme">Do you know Pademobile</h2>
-                <h4 class="text book italic">Click the next button for know it.</h4>
-                <a href="#" class="button large margin-top">Check it!</a>
-            </div>
-        </div>
-    </section>
 
-    <section class="padding bck color">
-        <div class="row margin-bottom">
-            <div class="column_10 offset_1 text center">
-                <h1 class="color book theme">Who?</h1>
-                <h3 class="text thin">Carlos Bedoy is a mobile developer of  <a href="http://pademobile.com" class="text normal">Pademobile</a>. I've developed some applications for iOS and android or Django, at pademobile. Also I've developed mobile applications for my personal portfolio.</h3>
-             </div>
-         </div>
+	<div id="skills">
+		<div class="container">
+			<div class="row centered">
+				<h3>MY SKILLS</h3>
+				<div class="col-lg-3 mt">
+					<canvas id="iOS Development" height="130" width="130"></canvas>
+					<p>iOS Development</p>
+					<br>
+					<script>
+						var doughnutData = [
+								{
+									value: 70,
+									color:"#74cfae"
+								},
+								{
+									value : 30,
+									color : "#3c3c3c"
+								}
+							];
+							var myDoughnut = new Chart(document.getElementById("iOS Development").getContext("2d")).Doughnut(doughnutData);
+					</script>
+				</div>
+				<div class="col-lg-3 mt">
+					<canvas id="Android Development" height="130" width="130"></canvas>
+					<p>Android Development</p>
+					<br>
+					<script>
+						var doughnutData = [
+								{
+									value: 90,
+									color:"#74cfae"
+								},
+								{
+									value : 10,
+									color : "#3c3c3c"
+								}
+							];
+							var myDoughnut = new Chart(document.getElementById("Android Development").getContext("2d")).Doughnut(doughnutData);
+					</script>
+				</div>
+				<div class="col-lg-3 mt">
+					<canvas id="Django" height="130" width="130"></canvas>
+					<p>Django</p>
+					<br>
+					<script>
+						var doughnutData = [
+								{
+									value: 65,
+									color:"#74cfae"
+								},
+								{
+									value : 35,
+									color : "#3c3c3c"
+								}
+							];
+							var myDoughnut = new Chart(document.getElementById("Django").getContext("2d")).Doughnut(doughnutData);
+					</script>
+				</div>
+				<div class="col-lg-3 mt">
+					<canvas id="Web Development" height="130" width="130"></canvas>
+					<p>Web Development</p>
+					<br>
+					<script>
+						var doughnutData = [
+								{
+									value: 40,
+									color:"#74cfae"
+								},
+								{
+									value : 60,
+									color : "#3c3c3c"
+								}
+							];
+							var myDoughnut = new Chart(document.getElementById("Web Development").getContext("2d")).Doughnut(doughnutData);
+					</script>
+				</div>
+			</div><!-- /row -->
+		</div><!-- /container -->
+	</div><!-- /skills -->
+	
+	<section id="contact"></section>
+	<div id="social">
+		<div class="container">
+			<div class="row centered">
+				<div class="col-lg-8 col-lg-offset-2">
+					<div class="col-md-3">
+						<a href="https://www.facebook.com/carlos.bedoy"><i class="fa fa-facebook"></i></a>
+					</div>
+					<div class="col-md-3">
+						<a href="https://github.com/cbedoy"><i class="fa fa-github"></i></a>
+					</div>
+					<div class="col-md-3">
+						<a href="https://www.linkedin.com/profile/view?id=308719778"><i class="fa fa-linkedin"></i></a>
+					</div>
+					<div class="col-md-3">
+						<a href="#"><i class="fa fa-google-plus"></i></a>
+					</div>
+					<div class="col-md-3">
+						<a href="https://soundcloud.com/bedoyproject"><i class="fa fa-music"></i></a>
+					</div>
+					<div class="col-md-3">
+						<a href="https://twitter.com/carlos_bedoy"><i class="fa fa-twitter"></i></a>
+					</div>
+					<div class="col-md-3">
+						<a href="https://twitter.com/carlos_bedoy"><i class="fa fa-coffee"></i></a>
+					</div>
+					<div class="col-md-3">
+						<a href="https://www.youtube.com/channel/UCyt8X-kfvHJQfqqho0A2Uqw"><i class="fa fa-youtube"></i></a>
+					</div>
+				</div>
+			</div>
+		</div><!-- /container -->
+	</div><!-- /social -->
 
-        <div class="row ">
-            <div class="column_4 offset_4 text center">
-                <img src="https://avatars2.githubusercontent.com/u/5570799?s=460" class="responsive rounded margin-bottom"/>
-                <a href="https://github.com/cbedoy/" class="twitter-follow-button " data-show-count="true" data-dnt="true">Fork me in github</a>
-                
-            </div>
-        </div>
-    </section>
 
-    <footer class="bck dark padding">
-        <div class="row margin-top margin-bottom">
+	<div id="f">
+		<div class="container">
+			<div class="row">
+				<p>Web page by <i class="fa fa-heart"></i> Carlos Alfredo Cervantes Bedoy</p>
+			</div>
+		</div>
+	</div>
 
-            <div class="column_3">
-                <p class="text bold big">Need some help?</p>
-                For quick answers or help <a href="https://twitter.com/tapquo" target="_blank" class="text underline color theme">follow us</a>
-            </div>
-        </div>
-    </footer>
-
-    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-    <script src="javascripts/tuktuk.js"></script>
-</body>
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="assets/js/bootstrap.js"></script>
+  </body>
 </html>
