Set material design style

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 						var doughnutData = [
 								{
 									value: 70,
-									color:"#74cfae"
+									color:"#009688"
 								},
 								{
 									value : 30,
@@ -147,7 +147,7 @@
 						var doughnutData = [
 								{
 									value: 90,
-									color:"#74cfae"
+									color:"#009688"
 								},
 								{
 									value : 10,
@@ -165,7 +165,7 @@
 						var doughnutData = [
 								{
 									value: 65,
-									color:"#74cfae"
+									color:"#009688"
 								},
 								{
 									value : 35,
@@ -183,7 +183,7 @@
 						var doughnutData = [
 								{
 									value: 40,
-									color:"#74cfae"
+									color:"#009688"
 								},
 								{
 									value : 60,
@@ -212,7 +212,7 @@
 						<a href="https://www.linkedin.com/profile/view?id=308719778"><i class="fa fa-linkedin"></i></a>
 					</div>
 					<div class="col-md-3">
-						<a href="#"><i class="fa fa-google-plus"></i></a>
+						<a href="https://plus.google.com/u/0/106338379193622769814"><i class="fa fa-google-plus"></i></a>
 					</div>
 					<div class="col-md-3">
 						<a href="https://soundcloud.com/bedoyproject"><i class="fa fa-music"></i></a>
@@ -221,7 +221,7 @@
 						<a href="https://twitter.com/carlos_bedoy"><i class="fa fa-twitter"></i></a>
 					</div>
 					<div class="col-md-3">
-						<a href="https://twitter.com/carlos_bedoy"><i class="fa fa-coffee"></i></a>
+						<a href="https://www.facebook.com/carlos.bedoy"><i class="fa fa-coffee"></i></a>
 					</div>
 					<div class="col-md-3">
 						<a href="https://www.youtube.com/channel/UCyt8X-kfvHJQfqqho0A2Uqw"><i class="fa fa-youtube"></i></a>
@@ -235,7 +235,7 @@
 	<div id="f">
 		<div class="container">
 			<div class="row">
-				<p>Web page by <i class="fa fa-heart"></i> Carlos Alfredo Cervantes Bedoy</p>
+				<p>Web page by  <i class="fa fa-music"></i>  Carlos Bedoy</p>
 			</div>
 		</div>
 	</div>
