--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<!-- CHANGE TITLE AND META ACCORDINGLY -->
-		<title>Carlo Bedoy</title>
+		<title>Carlos Bedoy</title>
 		<meta name="description" content="Carlos Bedoy Personal Pager">
 		<meta name="keywords" content="carlos, bedoy, mobile application, android, developer">
 		<meta name="copyright" content="Copyright © Carlos Bedoy. All Rights Reserved.">
@@ -54,7 +54,10 @@
 				<!-- REPLACE WITH YOUR APP DESCRIPTION -->
 				<span class="text-description"><b>Code is my life</b>
 					<br>
-					I have 24 yars olds, and I specialized in mobile development, also I like write code everytime, and learn new things of the programming, I'm specialized on the frontend but also have good skills on the backend, my favorites lenguages are Objective C, Python and Java, but recently I like javascript, also I'm musician and free time I usually compose music with my guitar, my Mac and my dreams....
+				Hello I'm 24 yars olds, and I'm a Mobile Application Developer, I love write code all the time, and learn new things about development and programming, I'm specialized on the frontend but also have good skills on the backend, my favorites languages are Objective C, Swift, Kootlin, Java and Python,  Also I'm musician and free time I usually compose music with my guitar, my Mac and my dreams....
+
+I like work with Design Patterns, iOS and Android :)
+
 			</div>
 			
 			
