--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="assets/plugins/font-awesome/css/font-awesome.css">
     
     <!-- Theme CSS -->  
-    <link id="theme-style" rel="stylesheet" href="assets/css/styles.css">
+    <link id="theme-style" rel="stylesheet" href="assets/css/styles-6.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -30,20 +30,20 @@
     <div class="wrapper">
         <div class="sidebar-wrapper">
             <div class="profile-container">
-                <img class="profile" src="assets/images/profile.png" alt="" />
+                <img class="profile" src="assets/images/profile.png" alt=""  width="180" height="180"/>
                 <h1 class="name">Carlos Bedoy</h1>
-                <h3 class="tagline">Mobile Head Leader (DagM8)</h3>
+                <h3 class="tagline">Mobile Leader</h3>
             </div><!--//profile-container-->
             
             <div class="contact-container container-block">
                 <ul class="list-unstyled contact-list">
                     <li class="email"><i class="fa fa-envelope"></i><a href="mailto: carlos.bedoy@gmail.com">carlos.bedoy@gmail.com</a></li>
-                    <li class="phone"><i class="fa fa-phone"></i><a href="tel:+52 449 467 4121">+52 449 4674121</a></li>
+                    <li class="phone"><i class="fa fa-phone"></i><a href="tel:+52 449 467 4121">+52 1 (449) 467 4121</a></li>
                     <li class="website"><i class="fa fa-globe"></i><a href="http://cbedoy.github.io/" target="_blank">Profile</a></li>
-                    <li class="linkedin"><i class="fa fa-linkedin"></i><a href="https://www.linkedin.com/in/carlos-bedoy-34248187" target="_blank">linkedin</a></li>
-                    <li class="github"><i class="fa fa-github"></i><a href="https://github.com/cbedoy" target="_blank">github.com/cbedoy</a></li>
-                    <li class="facebook"><i class="fa fa-facebook"></i><a href="https://www.facebook.com/carlos.bedoy" target="_blank">facebook</a></li>
-                    <li class="soundcloud"><i class="fa fa-soundcloud"></i><a href="https://soundcloud.com/bedoyproject" target="_blank">soundcloud</a></li>
+                    <li class="linkedin"><i class="fa fa-linkedin"></i><a href="https://www.linkedin.com/in/carlos-bedoy-34248187" target="_blank">Linkedin</a></li>
+                    <li class="github"><i class="fa fa-github"></i><a href="https://github.com/cbedoy" target="_blank">Github</a></li>
+                    <li class="facebook"><i class="fa fa-facebook"></i><a href="https://www.facebook.com/carlos.bedoy" target="_blank">Facebook</a></li>
+                    <li class="soundcloud"><i class="fa fa-soundcloud"></i><a href="https://soundcloud.com/bedoyproject" target="_blank">Soundcloud</a></li>
                 </ul>
             </div><!--//contact-container-->
             <div class="education-container container-block">
