Code changes for 2k23

--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
                 </ul>
             </div>
         </nav>
@@ -47,9 +46,12 @@
                         Aguascalientes, Mexico. Relocation Available
                         <a href="mailto:name@email.com">carlos.bedoy@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I’m a mobile native Android, and iOS developer, passionate developer and musician, like to improve myself reading and learning new stuff and sharing my knowledge with somebody else.</p>
-                    <p class="lead mb-5">Fan lover of desing patterns, code uncoupled, flat desing & UX, also I'm musician self productor, with strong kills for playing guitar, ukulele, bass, and keyboard and composing.</p>
-                    <p class="lead mb-6">Line by line, code by code, logic and syntax, my dream explodes.</p>
+
+                    <p class="lead mb-5">As a highly skilled mobile developer with a focus on Android and iOS platforms, I possess a strong passion for both programming and music. My dedication to self-improvement is evidenced by my constant reading and learning of new technologies, as well as my eagerness to share knowledge with others.</p>
+
+                    <p class="lead mb-5">In addition to my expertise in design patterns, code decoupling, flat design, and UX, I am also a self-producing musician with extensive experience playing guitar, ukulele, bass, and keyboard, as well as composing original music.</p>
+
+                    <p class="lead mb-5">My attention to detail is reflected in my approach to every project, as I meticulously evaluate each line of code for logic and syntax to ensure optimal functionality. With a burning desire to realize my dreams, I am committed to creating innovative and seamless mobile applications that exceed expectations.</p>
 
 
                     <div class="social-icons">
@@ -67,17 +69,33 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">Android Engineer</h3>
+                            <div class="subheading mb-3">Globant @ Remote</div>
+                            <p>Royal Caribbean Contractor.</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Aug 2021 - Present</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Android Engineer</h3>
+                            <div class="subheading mb-3">Caffeine.TV [Freelance] @ Remote</div>
+                            <p>Caffeine.tv android app.</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Mar 2022 - Feb 2023</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">Senior Android Developer</h3>
                             <div class="subheading mb-3">Tech-Bridge IT @ Remote</div>
-                            <p>Working such Android developer in Phunware application.</p>
+                            <p>Phunware application.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">May 2021 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">May 2021 - Aug 2021</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Senior Android Developer</h3>
                             <div class="subheading mb-3">Vetta.io @ Remote</div>
-                            <p>Worked such Android developer in okboy project.</p>
+                            <p>Okboy project.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2020 - May 2021</span></div>
                     </div>
@@ -195,24 +213,13 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a mobile developer, I like to compose, record music with my friends. Before covid-19 used to travel in my country or international</p>
-                    <p class="mb-0">Also I like do excersive, hiking, cook and discover new skills, recently i enjoy with plants and nature.</p>
+                    <p>As a mobile developer, I spend most of my time typing on a keyboard and staring at screens, but when I'm not doing that, you can find me jamming with my buddies and recording some sweet tunes.</p>
+                    <p>I'm also a bit of a fitness junkie and love working up a sweat to counteract all the hours I spend sitting on my bum. I'm an avid traveler, whether it's exploring the hidden gems in my own country or jet-setting to exotic locations overseas.</p>
+                    <p>When it comes to food, I have a bit of a love affair with spicy dishes and can't resist trying new flavors and ingredients. I'm always on the lookout for new things to learn and discover, whether it's a new hobby or a fascinating bit of trivia.</p>
+                    <p>And finally, I'll admit it - I'm a bit of a neat freak. There's nothing more satisfying than a good old-fashioned cleaning spree, so I'm always happy to roll up my sleeves and tackle any mess that needs tidying up.</p>
                 </div>
             </section>
             <hr class="m-0" />
-            <!-- Awards-->
-            <section class="resume-section" id="awards">
-                <div class="resume-section-content">
-                    <h2 class="mb-5">Awards & Certifications</h2>
-                    <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            TODO
-                        </li>
-                        
-                    </ul>
-                </div>
-            </section>
         </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
